[package]
name = "busse-mongodb-migration-to-postgres-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.27"
mongodb = "2.4.0"
postgres = "0.19.4"
serde = { version = "1.0.158", features = ["derive"] }
tokio = "1.26.0"
toml = "0.7.3"
