[package]
name = "busse-mongodb-migration-to-postgres-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
futures = "0.3.27"
mongodb = "2.4.0"
postgres = { version = "0.19.4", features = ["with-uuid-1"] }
postgres-types = "0.2.4"
serde = { version = "1.0.158", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.26.0", features = ["full"] }
tokio-pg-mapper = "0.2.0"
tokio-postgres = { version = "0.7.7", features = ["with-uuid-0_8"] }
toml = "0.7.3"
uuid = "1.3.0"
